--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,13 +7,15 @@ AllCops:
 
 Metrics/LineLength:
   Max: 150
-Style/Documentation:
-  Enabled: false
 Metrics/BlockLength:
   Max: 50
 Metrics/MethodLength:
   Max: 240
-Style/Next:
-  Enabled: false
 Metrics/AbcSize:
   Max: 160
+Metrics/ClassLength:
+  Max: 300
+Style/Next:
+  Enabled: false
+Style/Documentation:
+  Enabled: false
